# toy_lang

./: Cargo.toml
code_samples/: simple_program.tl
src/: ast.rs  main.rs  parser.rs
toy_ast/src/: lib.rs
toy_jit/: Cargo.toml
toy_parser/: Cargo.toml
toy_parser/src/: ast.rs  lib.rs  parser.rs  typecheck.rs
toy_typecheck/: Cargo.toml
