[package]
name = "toy_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
toy_parser = { path = "toy_parser" }

[workspace]
resolver = "2"
members = [
    "toy_ast",
    "toy_jit",
    "toy_parser",
    "toy_typecheck",
]
