[package]
name = "toy_jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy_ast = { path = "../toy_ast" }
cranelift = "0.102.1"
cranelift-jit = "0.102.1"
cranelift-module = "0.102.1"
cranelift-native = "0.102.1"
