[package]
name = "toy_jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy_parser = { path = "../toy_parser" }
cranelift = "0.103.0"
cranelift-jit = "0.103.0"
cranelift-module = "0.103.0"
cranelift-native = "0.103.0"
